<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/oneSixD"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/fourD"
            android:paddingStart="@dimen/fourD"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                android:hint="@string/prod_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/prod_details"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/fourD"
            android:paddingStart="@dimen/fourD"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_prod_price"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_prod_quan"
                android:hint="@string/quan"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/sup_details"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/fourD"
            android:paddingStart="@dimen/fourD"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_sup_name"
                android:hint="@string/sup_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_sup_no"
                android:hint="@string/sup_no"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
